# lea

./: .gitignore  MCP_TEST_RESULTS.md  MCP_USAGE.md  README.md  TEST_RESULTS.md  mcp_ui_aggregator.db  nixpacks.toml  requirements.txt  start.sh
lea/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .railway-ignore  .railwayignore  AI_AGENT_ENDPOINTS.md  BACKEND_TURBO_BOOST.md  CRITICAL_ISSUES_TASKS.md  DEPLOYMENT.md  DOCKER_FINAL.md  Dockerfile  Dockerfile.railway  FINAL_BUTTON_REPORT.md  FINAL_FIX.md  FIX_DEPLOY.md  IMPLEMENTATION_STATUS.md  IMPROVEMENT_RECOMMENDATIONS.md  MAIN_DEPLOY.md  MCP_AGENT_INTEGRATION.md  MCP_AI_AGENT_GUIDE.md  MCP_GATEWAY_COMPLETE.md  MCP_SERVER_DOCS.md  MINIMAL_SETUP.md  NEW_DEPLOY.md  PERFORMANCE_README.md  PERFORMANCE_TURBO_BOOST_COMPLETE.md  PHASE_1_COMPLETE.md  Procfile  QUICK_DEPLOY.md  RAILWAY_DEPLOY.md  RAILWAY_STATUS.md  README.md  READY_TO_DEPLOY.md  TAILWIND_FIXED.md  TASK_COMPLETION_REPORT.md  TECHNICAL_ARCHITECTURE.md  TEMPLATE_DOCS.md  UPDATE_SUMMARY.md  absolute_final_validation.py  (+51 more)
lea/examples/nextjs-demo/: package-lock.json  package.json  test-e2e.js
lea/examples/nextjs-demo/app/: layout.tsx  page.tsx
lea/examples/nextjs-demo/components/: AuthenticationForm.tsx  HeroSection.tsx  NavigationBar.tsx  PricingTable.tsx
lea/mcp_ui_aggregator/: __init__.py  analytics.py
lea/mcp_ui_aggregator/ai/: __init__.py  code_analysis.py  component_recommendations.py  semantic_search.py  template_suggestions.py
lea/mcp_ui_aggregator/api/: app.py  blocks_api.py  lea_mcp_server.py  mcp_bridge.py  mcp_discovery.py  mcp_server.py  providers_api.py  providers_api_simple.py
lea/mcp_ui_aggregator/backend_tools/: __init__.py  architect_mode.py  project.py
lea/mcp_ui_aggregator/backend_tools/templates/: .dockerignore.j2  .env.example.j2  .gitignore.j2  Dockerfile.j2  README.md.j2  alembic.ini.j2  app.py.j2  docker-compose.yml.j2  pyproject.toml.j2
lea/mcp_ui_aggregator/backend_tools/templates/alembic/: env.py.j2
lea/mcp_ui_aggregator/backend_tools/templates/api/: health.py.j2  router.py.j2
lea/mcp_ui_aggregator/cli/: __init__.py
lea/mcp_ui_aggregator/commercial/: __init__.py
lea/mcp_ui_aggregator/core/: asgi_middleware.py  config.py  database.py  optimized_responses.py  system_prompts.py
lea/mcp_ui_aggregator/ingestion/: angular_material.py  antd.py  base.py  bootstrap.py  bulma.py  chakra_ui.py  mantine.py  material_ui.py  primeng.py  shadcn_ui.py  svelte.py  tailwind.py  vuetify.py
lea/mcp_ui_aggregator/models/: component_manifest.py  database.py
lea/mcp_ui_aggregator/providers/: __init__.py  aceternity.py  alignui.py  base.py  bentogrids.py  daisyui.py  hyperui.py  magicui.py  nextjs_design.py  reactbits.py  registry.py  shadcn.py  shadcn_enhanced.py  tailwind_components.py  twenty_first.py
lea/mcp_ui_aggregator/search/: __init__.py  engine.py
lea/mcp_ui_aggregator/templates/: __init__.py  predefined.py  tools.py
lea/mcp_ui_aggregator/themes/: __init__.py  applicator.py
lea/mcp_ui_aggregator/tools/: __init__.py  backend_tools.py  component_tools.py
lea/tests/: conftest.py
lea/tests/unit/: test_models.py  test_seed_demo.py  test_tools.py
(+7 files in other folders)
